--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>AWS CodeDeploy with github - niket</title>
+    <title>AWS CodeDeploy with github - By niket</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     
   </head>
@@ -13,9 +13,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>AWS CodeDeploy with github -  VIKAS
+        <h1>AWS CodeDeploy with github - By niket
 		</h1>
-        <p>Code is edited and now launched easily through github commit! - NIKET</p>
+        <p>Code is edited and now launched easily through github commit! - BY NIKET</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
